--- a/style.css
+++ b/style.css
@@ -299,3 +299,28 @@ ul li:hover ul.drop{
 .botao{
     margin: 5px;
 }
+.lista{
+font-weight: bold;
+display: inline;
+font-family: var(--fonte-principal);
+font-size: 1rem; color:var(--Cor-secundaria);
+padding: 10px;
+}
+.links{
+    display: inline-block;
+    
+}
+.links a {
+    padding: 5px;margin: 5px 0;
+    opacity: 1;font-weight: bold;
+}
+.links a:hover{
+    opacity: 0.7;
+}
+.share{
+    padding: 5px;
+    display: block;
+    text-transform: lowercase;
+    font-size: 1.2rem;font-weight: bold;
+    color: var(--Cor-primaria);
+}
