Projeto em Node

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     <!--Icones-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!--CSS-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -27,8 +27,8 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="#beneficios">Benefícios</a></li>
                         <li><a href="#duvidas-frequentes">Dúvidas Frequentes</a></li>
-                        <li><a href="cadastro.html">Cadastrar-se</a></li>
-                        <li><a href="login.html">Fazer Login </a></li>
+                        <li><a href="/cadastro">Cadastrar-se</a></li>
+                        <li><a href="/login">Fazer Login </a></li>
                     </ul>
                 </div>
             </div>
@@ -42,12 +42,14 @@
                         <h2><i class="bi bi-bookmark-star-fill"></i> Lista de supermercado Otimizada</h2>
                         <h2><i class="bi bi-bookmark-star-fill"></i> Sistema Intuitivo</h2>
                         <h2><i class="bi bi-bookmark-star-fill"></i> Personalize as categorias do seu jeito</h2>
-                        <a href="cadastro.html">Cadastre-se</a>
+                        <a href="/cadastro">Cadastre-se</a>
                     </div>
                     <div class="destaque">
-                        <a href="cadastro.html"><img src="img/banner.jpg"
-                                alt="Lista de supermercados Otimizizadas, Cadastre-se"
+                        <a href="/cadastro">
+                            <img src="img/banner.jpg" alt="Lista de supermercados Otimizizadas, Cadastre-se"
                                 class="d-md-block d-sm-none d-none" srcset="">
+
+                                
                         </a>
                     </div>
                 </div>
@@ -62,21 +64,21 @@
                         <div class="col-md-4">
                             <li>
                                 <h4>O Sistema permite criar novas listas de compras.</h4>
-                                <a href="cadastro.html">Quero Começar</a>
+                                <a href="/cadastro">Quero Começar</a>
                             </li>
                         </div>
 
                         <div class="col-md-4">
                             <li>
                                 <h4>O Sistema permite edição de listas existentes.</h4>
-                                <a href="cadastro.html">Quero Começar</a>
+                                <a href="/cadastro">Quero Começar</a>
                             </li>
                         </div>
 
                         <div class="col-md-4">
                             <li>
                                 <h4>O Sistema permite  que o usuário personalize as categorias</h4>
-                                <a href="cadastro.html">Quero Começar</a>
+                                <a href="/cadastro">Quero Começar</a>
                             </li>
                         </div>
                 </ul>
@@ -181,8 +183,9 @@
     <footer>
         <!--  footer -->
         <div class="row rodape text-center">
-             <span>  &copy; CompraInteligente - 2025 - <a href="mailto:agamenon.junior@discente.ufma.br">agamenon.junior@discente.ufma.br</a></span>
-            
+            <span> &copy; CompraInteligente - 2025 - <a
+                    href="mailto:agamenon.junior@discente.ufma.br">agamenon.junior@discente.ufma.br</a></span>
+
         </div>
 
 
