--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -19,27 +19,27 @@
     <div class="painel-cadastro">
         <div class="container">
             <div class="cadastro">
-                <form action="" method="post" class="form-floating">
+                <form action="/cadastro" method="post" class="form-floating">
                     <div class="d-flex justify-content-center mb-5">
                      <strong class="mt-2 titulo">Cadastrar-se</strong>
                     </div>
 
                     <div class="form-floating mb-3 mt-3 p-2">
-                        <input type="email" class="form-control" id="floatingInput" placeholder="Informe o seu e-mail">
+                        <input type="text" name="nome" class="form-control" id="floatingInput" placeholder="Informe o seu e-mail">
                         <label for="floatingInput">Nome Completo</label>
                     </div>
 
                     <div class="form-floating mb-3 mt-3 p-2">
-                        <input type="email" class="form-control" id="floatingInput" placeholder="Informe o seu e-mail">
+                        <input type="email" name="email" class="form-control" id="floatingInput" placeholder="Informe o seu e-mail">
                         <label for="floatingInput">E-mail</label>
                     </div>
                     <div class="form-floating mb-3 mt-3 p-2">
-                        <input type="password" class="form-control" id="floatingPassword"
+                        <input type="password" name="senha" class="form-control" id="floatingPassword"
                             placeholder="Informe sua senha">
                         <label for="floatingPassword">Senha</label>
                     </div>
                     <div class="form-floating mb-3 mt-3 p-2">
-                        <input type="password" class="form-control" id="floatingPassword"
+                        <input type="password" name="nsenha" class="form-control" id="floatingPassword"
                             placeholder="Informe sua senha">
                         <label for="floatingPassword">Digite Novamente sua Senha</label>
                     </div>
