--- a/views/produtos.ejs
+++ b/views/produtos.ejs
@@ -25,39 +25,7 @@
                 <div class="menu-dropdown">
                     <nav class="">
 
-                        <ul class="" id="menusuperior">
-                            <li><a href="home.html">Home</a></li>
-                            <li>
-                                <a href="categorias.html">Categorias <i class="bi bi-caret-down"></i></a>
-                                <ul class="drop">
-                                    <li><a href="categorias.html">Listar Categorias</a></li>
-                                    <li><a href="cadastrar-categoria.html">Cadastrar Categorias</a></li>
-                                    <li><a href="editar-categoria.html">Editar Categorias</a></li>
-                                    <li><a href="excluir-categoria.html">Excluir Categorias</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="produtos.html">Produtos <i class="bi bi-caret-down"></i></a>
-                                <ul class="drop">
-                                    <li><a href="produtos.html">Meus Produtos</a></li>
-                                    <li><a href="cadastrar-produto.html">Cadastrar Produto</a></li>
-                                    <li><a href="editar-produto.html">Editar Produto</a></li>
-                                    <li><a href="excluir-produto.html">Excluir Produto</a></li>
-                                </ul>
-
-                            </li>
-                            <li>
-                                <a href="listas.html">Listas <i class="bi bi-caret-down"></i></a>
-                                <ul class="drop">
-                                    <li><a href="listas.html">Minhas Listas</a></li>
-                                    <li><a href="cadastrar-lista.html">Cadastrar Lista</a></li>
-                                    <li><a href="editar-lista.html">Editar Lista</a></li>
-                                    <li><a href="excluir-lista.html">Excluir Lista</a></li>
-                                </ul>
-
-                            </li>
-                            <li><a href="index.html">Sair</a></li>
-                        </ul>
+                        <%- include('menu_header'); -%>
                     </nav>
                 </div>
             </div>
