--- a/views/cadastrar-categoria.ejs
+++ b/views/cadastrar-categoria.ejs
@@ -25,39 +25,8 @@
                 <div class="menu-dropdown">
                     <nav class="">
 
-                        <ul class="" id="menusuperior">
-                            <li><a href="home.html">Home</a></li>
-                            <li>
-                                <a href="categorias.html">Categorias <i class="bi bi-caret-down"></i></a>
-                                <ul class="drop">
-                                    <li><a href="categorias.html">Listar Categorias</a></li>
-                                    <li><a href="cadastrar-categoria.html">Cadastrar Categorias</a></li>
-                                    <li><a href="editar-categoria.html">Editar Categorias</a></li>
-                                    <li><a href="excluir-categoria.html">Excluir Categorias</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="produtos.html">Produtos <i class="bi bi-caret-down"></i></a>
-                                <ul class="drop">
-                                    <li><a href="produtos.html">Meus Produtos</a></li>
-                                    <li><a href="cadastrar-produto.html">Cadastrar Produto</a></li>
-                                    <li><a href="editar-produto.html">Editar Produto</a></li>
-                                    <li><a href="excluir-produto.html">Excluir Produto</a></li>
-                                </ul>
-
-                            </li>
-                            <li>
-                                <a href="listas.html">Listas <i class="bi bi-caret-down"></i></a>
-                                <ul class="drop">
-                                    <li><a href="listas.html">Minhas Listas</a></li>
-                                    <li><a href="cadastrar-lista.html">Cadastrar Lista</a></li>
-                                    <li><a href="editar-lista.html">Editar Lista</a></li>
-                                    <li><a href="excluir-lista.html">Excluir Lista</a></li>
-                                </ul>
-
-                            </li>
-                            <li><a href="index.html">Sair</a></li>
-                        </ul>
+                        <%- include('menu_header'); -%>
+                        
                     </nav>
                 </div>
             </div>
@@ -70,15 +39,15 @@
 
                     <div class="formulario">
                         <span class="titulo p-2 d-flex justify-content-center">Cadastrar Categoria</span>
-                        <form action="" method="post" class="form-control">
+                        <form action="/cadastrar-categoria" method="post" class="form-control">
                             <fieldset class="border">
-                                <input type="text" class="form-control" name="categoria" id=""
+                                <input type="text" class="form-control" name="nome_categoria" id=""
                                     placeholder="Informe um nome para a categoria">
                             </fieldset>
 
                             <div class="d-flex justify-content-center mb-2 mt-2">
                                 <button type="submit" class="botao btn btn-success text-center">Cadastrar</button>
-                                <button type="submit" class="botao btn btn-outline-danger text-center">Limpar</button>
+                                <button type="reset" class="botao btn btn-outline-danger text-center">Limpar</button>
                             </div>
                     </div>
 
