--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -25,39 +25,8 @@
                 <div class="menu-dropdown">
                     <nav class="">
 
-                        <ul class="" id="menusuperior">
-                            <li><a href="home.html">Home</a></li>
-                            <li>
-                                <a href="categorias.html">Categorias <i class="bi bi-caret-down"></i></a>
-                                <ul class="drop">
-                                    <li><a href="categorias.html">Listar Categorias</a></li>
-                                    <li><a href="cadastrar-categoria.html">Cadastrar Categorias</a></li>
-                                    <li><a href="editar-categoria.html">Editar Categorias</a></li>
-                                    <li><a href="excluir-categoria.html">Excluir Categorias</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="produtos.html">Produtos <i class="bi bi-caret-down"></i></a>
-                                <ul class="drop">
-                                    <li><a href="produtos.html">Meus Produtos</a></li>
-                                    <li><a href="cadastrar-produto.html">Cadastrar Produto</a></li>
-                                    <li><a href="editar-produto.html">Editar Produto</a></li>
-                                    <li><a href="excluir-produto.html">Excluir Produto</a></li>
-                                </ul>
-
-                            </li>
-                            <li>
-                                <a href="listas.html">Listas <i class="bi bi-caret-down"></i></a>
-                                <ul class="drop">
-                                    <li><a href="listas.html">Minhas Listas</a></li>
-                                    <li><a href="cadastrar-lista.html">Cadastrar Lista</a></li>
-                                    <li><a href="editar-lista.html">Editar Lista</a></li>
-                                    <li><a href="excluir-lista.html">Excluir Lista</a></li>
-                                </ul>
-
-                            </li>
-                            <li><a href="index.html">Sair</a></li>
-                        </ul>
+                        <%- include('menu_header'); -%>
+                        
                     </nav>
                 </div>
             </div>
@@ -80,25 +49,20 @@
                                 <th scope="col">Excluir</th>
                               </tr>
                             </thead>
+                            
                             <tbody>
+                                <% for(var i=0; i<categorias.length; i++) {%>
+
+
+                                  
                               <tr>
-                                <th scope="row">1</th>
-                                <td>Frutas</td>
-                                <td><a href="editar-categoria.html"><i class="bi bi-pencil-square"></i></a></td>
-                                <td><a href="editar-categoria.html"><i class="bi bi-trash3 text-danger"></i></i></a></td>
+                                <th scope="row"><%= categorias[i].id %></th>
+                                <td><%= categorias[i].nome_categoria %></td>
+                                <td><a href="/editar-categoria/<%= categorias[i].id %>"><i class="bi bi-pencil-square"></i></a></td>
+                                <td><a href="/excluir-categoria/<%= categorias[i].id %>"><i class="bi bi-trash3 text-danger"></i></i></a></td>
                               </tr>
-                              <tr>
-                                <th scope="row">2</th>
-                                <td>Proteinas</td>
-                                <td><a href="editar-categoria.html"><i class="bi bi-pencil-square"></i></a></td>
-                                <td><a href="editar-categoria.html"><i class="bi bi-trash3 text-danger"></i></i></a></td>
-                              </tr>
-                              <tr>
-                                <th scope="row">3</th>
-                                <td>Produtos de Limpeza</td>
-                                <td><a href="editar-categoria.html"><i class="bi bi-pencil-square"></i></a></td>
-                                <td><a href="editar-categoria.html"><i class="bi bi-trash3 text-danger"></i></i></a></td>
-                              </tr>
+                                <% } %>
+                              
                             </tbody>
                           </table>
                            
