--- a/views/editar-categoria.ejs
+++ b/views/editar-categoria.ejs
@@ -13,7 +13,7 @@
     <!--Icones-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!--CSS-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
@@ -25,39 +25,8 @@
                 <div class="menu-dropdown">
                     <nav class="">
 
-                        <ul class="" id="menusuperior">
-                            <li><a href="home.html">Home</a></li>
-                            <li>
-                                <a href="categorias.html">Categorias <i class="bi bi-caret-down"></i></a>
-                                <ul class="drop">
-                                    <li><a href="categorias.html">Listar Categorias</a></li>
-                                    <li><a href="cadastrar-categoria.html">Cadastrar Categorias</a></li>
-                                    <li><a href="editar-categoria.html">Editar Categorias</a></li>
-                                    <li><a href="excluir-categoria.html">Excluir Categorias</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="produtos.html">Produtos <i class="bi bi-caret-down"></i></a>
-                                <ul class="drop">
-                                    <li><a href="produtos.html">Meus Produtos</a></li>
-                                    <li><a href="cadastrar-produto.html">Cadastrar Produto</a></li>
-                                    <li><a href="editar-produto.html">Editar Produto</a></li>
-                                    <li><a href="excluir-produto.html">Excluir Produto</a></li>
-                                </ul>
+                        <%- include('menu_header'); -%>
 
-                            </li>
-                            <li>
-                                <a href="listas.html">Listas <i class="bi bi-caret-down"></i></a>
-                                <ul class="drop">
-                                    <li><a href="listas.html">Minhas Listas</a></li>
-                                    <li><a href="cadastrar-lista.html">Cadastrar Lista</a></li>
-                                    <li><a href="editar-lista.html">Editar Lista</a></li>
-                                    <li><a href="excluir-lista.html">Excluir Lista</a></li>
-                                </ul>
-
-                            </li>
-                            <li><a href="index.html">Sair</a></li>
-                        </ul>
                     </nav>
                 </div>
             </div>
@@ -70,15 +39,20 @@
 
                     <div class="formulario">
                         <span class="titulo p-2 d-flex justify-content-center">Editar Categoria</span>
-                        <form action="" method="post" class="form-control">
+                        <form action="/editar-categoria/:id" method="post" class="form-control">
                             <fieldset class="border">
-                                <input type="text" class="form-control" name="categoria" id=""
+                                <% for(var i=0; i<cat.length; i++) {%>
+                                  
+                                <input type="text" class="form-control" value="<%= cat[i].nome_categoria %>" name="nome_categoria" id=""
                                     placeholder="Informe um nome para a categoria">
-                            </fieldset>
+                                 
+                                <input type="hidden" name="id_categoria" value="<%= cat[i].id %>" >
+                                <% } %>
+                                </fieldset>
 
                             <div class="d-flex justify-content-center mb-2 mt-2">
                                 <button type="submit" class="botao btn btn-success text-center">Editar</button>
-                                <button type="submit" class="botao btn btn-outline-danger text-center">Limpar</button>
+                                <button type="reset" class="botao btn btn-outline-danger text-center">Limpar</button>
                             </div>
                     </div>
 
