--- a/views/cadastrar-produto.ejs
+++ b/views/cadastrar-produto.ejs
@@ -39,47 +39,41 @@
 
                     <div class="formulario">
                         <span class="titulo p-2 d-flex justify-content-center">Cadastrar Produto</span>
-                        <form action="" method="post">
+                        <form action="/cadastrar-produto" method="post" enctype="multipart/form-data">
                             <fieldset class="border p-2">
                                 <legend class="small legenda">digite o nome do produto</legend>
-                                <input type="text" class="form-control" name="nome" id=""
+                                <input type="text" class="form-control" name="nome_produto" id=""
                                     placeholder="Informe o nome do produto">
                                     
                             </fieldset>
 
                             <fieldset class="border p-2">
                                 <legend class="small legenda">digite a quantidade do produto</legend>
-                                <input type="number" class="form-control" name="quantidade" id=""
+                                <input type="number" class="form-control" name="quantidade_produto" id=""
                                     placeholder="Informe a quantidade do produto">
                                     
                             </fieldset>
 
                             <fieldset class="border p-2">
                                 <legend class="small legenda">Selecione uma Imagem para o produto</legend>
-                                <input type="file" class="form-control" name="imagem" id="">
+                                <input type="file" class="form-control" name="imagem_produto" id="">
                                     
                             </fieldset>
 
                             <fieldset class="border p-2">
                                 <legend class="small legenda">Selecione a Categoria do produto</legend>
-                                <select name="" class="form-select" id="">
-                                    <optgroup label="Frutas">
-                                        <option value="Banana">Banana</option>
-                                        <option value="Uva">Uva</option>
-                                        <option value="maca">Maçã</option>
-                                    </optgroup>
-                                    <optgroup label="Limpeza">
-                                        <option value="sabao-em-po">Sabão em pó</option>
-                                        <option value="Amaciante">Amaciante</option>
-                                        <option value="agua-sanitaria">Água Sanitária</option>
-                                    </optgroup>
+                                <select name="categoria_produto" class="form-select" id="">
+                                    <% for(var i=0; i<categorias.length; i++) {%>
+                                        <option value="<%= categorias[i].nome_categoria %>"><%= categorias[i].nome_categoria %></option>
+                                    <% } %>
+                                    
                                 </select>
                                     
                             </fieldset>
 
                             <div class="d-flex justify-content-center mb-2 mt-2">
                                 <button type="submit" class="botao btn btn-success text-center">Cadastrar</button>
-                                <button type="submit" class="botao btn btn-outline-danger text-center">Limpar</button>
+                                <button type="reset" class="botao btn btn-outline-danger text-center">Limpar</button>
                             </div>
                         </form>
                         
