--- a/views/cadastrar-lista.ejs
+++ b/views/cadastrar-lista.ejs
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <title>Painel - Compra Inteligente - Cadastrar Lista</title>
+    <title>Painel - Compra Inteligente - Cadastrar Categoria</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -39,78 +39,20 @@
 
                     <div class="formulario">
                         <span class="titulo p-2 d-flex justify-content-center">Cadastrar Lista</span>
-                        <form action="" method="post">
-                            <fieldset class="border p-2">
-                                <legend class="small legenda">digite o nome da Lista</legend>
-                                <input type="text" class="form-control" name="nome" id=""
-                                    placeholder="Informe o nome do produto">
-                                    
-                            </fieldset>
-
-                            <fieldset class="border p-2">
-                                <legend class="small legenda">Selecione um produto</legend>
-                                <select name="" class="form-select" id="">
-                                    <optgroup label="Frutas">
-                                        <option value="Banana">Banana</option>
-                                        <option value="Uva">Uva</option>
-                                        <option value="maca">Maçã</option>
-                                    </optgroup>
-                                    <optgroup label="Limpeza">
-                                        <option value="sabao-em-po">Sabão em pó</option>
-                                        <option value="Amaciante">Amaciante</option>
-                                        <option value="agua-sanitaria">Água Sanitária</option>
-                                    </optgroup>
-                                </select>
-                                    
+                        <form action="/cadastrar-lista" method="post" class="form-control">
+                            <fieldset class="border">
+                                <input type="text" class="form-control" name="nome_lista" id=""
+                                    placeholder="Informe um nome para sua Lista de compras">
                             </fieldset>
 
                             <div class="d-flex justify-content-center mb-2 mt-2">
-                                <button type="submit" class="botao btn btn-success text-center">Adicionar</button>
-                                <button type="submit" class="botao btn btn-outline-danger text-center">Limpar</button>
-                                <button type="submit" class="botao btn btn-primary text-center">Salvar</button>
+                                <button type="submit" class="botao btn btn-success text-center">Cadastrar</button>
+                                <button type="reset" class="botao btn btn-outline-danger text-center">Limpar</button>
                             </div>
-
-                            <table class="table">
-                                <thead>
-                                  <tr>
-                                    <th scope="col">Imagem</th>
-                                    <th scope="col">Nome</th>
-                                    <th scope="col">Categoria</th>
-                                    <th scope="col">Quantidade</th>
-                                    <th scope="col">Remover</th>
-                                  </tr>
-                                </thead>
-                                <tbody>
-                                  <tr>
-                                    <th scope="row"><img src="img/banana.png" width="50" height="50" alt="Produto Banana" srcset=""></th>
-                                    <td>Banana</td>
-                                    <td>Frutas</td>
-                                    <td>36</td>
-                                    <td><a href="editar-categoria.html"><i class="bi bi-trash3 text-danger"></i></i></a></td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row"><img src="img/uva.png" width="50" height="50" alt="Produto Uva" srcset=""></th>
-                                    <td>Uva</td>
-                                    <td>Frutas</td>
-                                    <td>3</td>
-                                    <td><a href="editar-categoria.html"><i class="bi bi-trash3 text-danger"></i></i></a></td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row"><img src="img/veja.png" width="50" height="50" alt="" srcset=""></th>
-                                    <td>Veja</td>
-                                    <td>Produtos de Limpeza</td>
-                                    <td>4</td>
-                                    <td><a href="editar-categoria.html"><i class="bi bi-trash3 text-danger"></i></i></a></td>
-                                  </tr>
-                                </tbody>
-                              </table>
-
-                        </form>
-                        
-                           
                     </div>
 
-                    
+                    </form>
+
                 </div>
 
 
