--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,10 +36,10 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="home">
-
-                    <span class="info">Olá, [Usuário]! Realize o cadastro de
+                    <% for(var i=0; i<user.length; i++) {%>
+                    <span class="info">Olá, <%= user[i].nome %>! Realize o cadastro de
                         suas categorias, produtos e Listas Personalizadas</span>
-
+                        <% } %> 
                 </div>
             </div>
 
