--- a/views/listas.ejs
+++ b/views/listas.ejs
@@ -39,61 +39,41 @@
 
                     <div class="formulario">
                         <span class="titulo mb-4 p-2 d-flex justify-content-center">Minhas Listas</span>
+                        <% for(var i=0; i<listas.length; i++) {%>
                         <div class="lista">
-                            <span>Minha Lista da Semana <i class="bi bi-caret-down"></i></span>
+                            <span><%= listas[i].nome_lista %> <i class="bi bi-caret-down"></i></span>
                         </div>
                         <div class="links">
-                            <a href="compartilhar.html"><i class="bi bi-share text-success"></i></a>
-                            <a href="compartilhar.html"><i class="bi bi-pencil-square"></i></a>
-                            <a href="compartilhar.html"><i class="bi bi-trash text-danger"></i></a>
+                            <a href="/compartilhar-lista/<%= listas[i].id %>"><i class="bi bi-share text-success"></i></a>
+                            <a href="/editar-lista/<%= listas[i].id %>"><i class="bi bi-pencil-square"></i></a>
+                            <a href="/excluir-lista/<%= listas[i].id %>"><i class="bi bi-trash text-danger"></i></a>
                         </div>
-
+                    </br>
+                     
                         <table class="table">
                             <thead>
                                 <tr>
-                                    <th scope="col">Imagem</th>
-                                    <th scope="col">Nome</th>
-                                    <th scope="col">Categoria</th>
+                                    <th scope="col">Produtos</th>
                                     <th scope="col">Editar</th>
                                     <th scope="col">Excluir</th>
                                 </tr>
                             </thead>
                             <tbody>
+                                
                                 <tr>
-                                    <th scope="row"><img src="img/banana.png" width="50" height="50"
-                                            alt="Produto Banana" srcset=""></th>
-                                    <td>Banana</td>
-                                    <td>Frutas</td>
-                                    <td><a href="editar-categoria.html"><i class="bi bi-pencil-square"></i></a></td>
-                                    <td><a href="editar-categoria.html"><i class="bi bi-trash3 text-danger"></i></i></a>
+                                    
+                                   
+                                    <td><%= listas[i].nome_produto %></td>
+                                    <td><a href="/produtos"><i class="bi bi-pencil-square"></i></a></td>
+                                    <td><a href="/produtos"><i class="bi bi-trash3 text-danger"></i></i></a>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <th scope="row"><img src="img/uva.png" width="50" height="50" alt="Produto Uva"
-                                            srcset=""></th>
-                                    <td>Uva</td>
-                                    <td>Frutas</td>
-                                    <td><a href="editar-categoria.html"><i class="bi bi-pencil-square"></i></a></td>
-                                    <td><a href="editar-categoria.html"><i class="bi bi-trash3 text-danger"></i></i></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th scope="row"><img src="img/veja.png" width="50" height="50" alt="Produto Veja" srcset="">
-                                    </th>
-                                    <td>Veja</td>
-                                    <td>Produtos de Limpeza</td>
-                                    <td><a href="editar-categoria.html"><i class="bi bi-pencil-square"></i></a></td>
-                                    <td><a href="editar-categoria.html"><i class="bi bi-trash3 text-danger"></i></i></a>
-                                    </td>
-                                </tr>
+                               
+                                
                             </tbody>
                         </table>
-                        <div class="lista">
-
-                            <span>Lista do Mês <i class="bi bi-caret-down"></i></span>
-                        </div>
-
-
+                        
+                        <% } %> 
 
 
                     </div>
