--- a/views/menu_header.ejs
+++ b/views/menu_header.ejs
@@ -11,9 +11,7 @@
         <a href="/produtos">Produtos <i class="bi bi-caret-down"></i></a>
         <ul class="drop">
             <li><a href="/produtos">Meus Produtos</a></li>
-            <li><a href="/cadastrar-produto">Cadastrar Produto</a></li>
-            <li><a href="/editar-produto">Editar Produto</a></li>
-            <li><a href="/excluir-produto">Excluir Produto</a></li>
+            <li><a href="/cadastrar-produto">Cadastrar Produto</a></li>            
         </ul>
 
     </li>
@@ -22,6 +20,7 @@
         <ul class="drop">
             <li><a href="/listas">Minhas Listas</a></li>
             <li><a href="/cadastrar-lista">Cadastrar Lista</a></li>
+            <li><a href="/adicionar-item">Adicionar item</a></li>
             <li><a href="/editar-lista">Editar Lista</a></li>
             <li><a href="/excluir-lista">Excluir Lista</a></li>
         </ul>
