--- a/views/produtos.ejs
+++ b/views/produtos.ejs
@@ -50,27 +50,16 @@
                               </tr>
                             </thead>
                             <tbody>
+                                <% for(var i=0; i<produtos.length; i++) {%>
                               <tr>
-                                <th scope="row"><img src="img/banana.png" width="50" height="50" alt="Produto Banana" srcset=""></th>
-                                <td>Banana</td>
-                                <td>Frutas</td>
-                                <td><a href="editar-categoria.html"><i class="bi bi-pencil-square"></i></a></td>
-                                <td><a href="editar-categoria.html"><i class="bi bi-trash3 text-danger"></i></i></a></td>
+                                <th scope="row"><img src="img/<%= produtos[i].imagem_produto %>" width="50" height="50" alt="Produto Banana" srcset=""></th>
+                                <td><%= produtos[i].nome_produto %> </td>
+                                <td><%= produtos[i].categoria_produto %></td>
+                                <td><a href="/editar-produto/<%= produtos[i].id %>"><i class="bi bi-pencil-square"></i></a></td>
+                                <td><a href="/excluir-produto/<%= produtos[i].id %>"><i class="bi bi-trash3 text-danger"></i></i></a></td>
                               </tr>
-                              <tr>
-                                <th scope="row"><img src="img/uva.png" width="50" height="50" alt="Produto Uva" srcset=""></th>
-                                <td>Uva</td>
-                                <td>Frutas</td>
-                                <td><a href="editar-categoria.html"><i class="bi bi-pencil-square"></i></a></td>
-                                <td><a href="editar-categoria.html"><i class="bi bi-trash3 text-danger"></i></i></a></td>
-                              </tr>
-                              <tr>
-                                <th scope="row"><img src="img/veja.png" width="50" height="50" alt="" srcset=""></th>
-                                <td>Veja</td>
-                                <td>Produtos de Limpeza</td>
-                                <td><a href="editar-categoria.html"><i class="bi bi-pencil-square"></i></a></td>
-                                <td><a href="editar-categoria.html"><i class="bi bi-trash3 text-danger"></i></i></a></td>
-                              </tr>
+                              <% } %>
+                              
                             </tbody>
                           </table>
                            
